# tradinjournal

./: .env.example  .gitignore  .prettierignore  DESIGN.md  README.md  design_guidelines.json  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  walkthrough TradinX UI Restoration Walkthrough
.agents/rules/: frontend-boundary-rules.md
.emergent/: emergent.yml
apps/api/: package.json
apps/api/src/: app.ts  main.ts
apps/api/src/http/: errors.ts  response.ts
apps/api/src/lib/: auth.ts  broker-connector.ts
apps/api/src/modules/: README.md
apps/mt5-bridge/: README.md  pyproject.toml  requirements.txt
apps/mt5-bridge/app/: config.py  main.py  models.py
apps/web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  reference-landing.html  reference-login-page.html  tailwind.config.ts
apps/web/.next/: prerender-manifest.json  trace
apps/web/.next/cache/: .rscinfo
apps/web/.next/server/: server-reference-manifest.json
apps/web/src/app/: globals.css  landing.css  layout.tsx  page.tsx
apps/web/src/components/: animated-number.tsx  app-shell.tsx  auth-aside.tsx  browser-frame.tsx  chart-tooltip.tsx  click-burst-effect.tsx  confirm-dialog.tsx  connect-broker-modal.tsx  cursor-glow.tsx  dashboard-calendar.tsx  day-trades-modal.tsx  deals-table.tsx  (+18 more)
apps/worker/: package.json
apps/worker/src/: main.ts
docs/: landing-redesign-plan.md  mt5-data-mapping.md  phase-1-daily-plan.md
frontend/: package.json
memory/: PRD.md  test_credentials.md
test_reports/: iteration_1.json
(+50 files in other folders)
